# openclawVPS

./: .gitignore  CASE_AUTOMATION.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  STOCK-CAPABILITY-MAP.md  STOCK-STUFF.md  TOOLS.md  USER.md  USG_value_sheet.csv  claw.code-workspace
.githooks/: pre-commit
docs/: AGENTS.md  ALWAYS_ON_CLAW_PLAN.md  (+6 more)
projects/forensic_cpra_engine/: README.md  pyproject.toml
projects/forensic_cpra_engine/data/CASE_BUNDLES/: case_YYYYMMDD_slug.case.yaml.example
projects/forensic_cpra_engine/data/CASE_BUNDLES/case_20260306_4880_t_st/: case.yaml
projects/forensic_cpra_engine/data/CASE_BUNDLES/case_20260306_4880_t_st/00_VAULT/: CHAIN_OF_CUSTODY_MANIFEST.json
projects/forensic_cpra_engine/data/CASE_BUNDLES/case_20260306_4880_t_st/02_OUTPUT/run_20260306_215115/: cpra_events.json  cpra_findings.json  cpra_report.md
projects/forensic_cpra_engine/data/CASE_BUNDLES/case_20260306_4880_t_st/02_OUTPUT/run_20260306_215302/: cpra_events.json
projects/forensic_cpra_engine/data/CASE_BUNDLES/case_20260306_4880_t_st/02_OUTPUT/run_20260307_023436/: claims_log.jsonl  claims_review.md
projects/forensic_cpra_engine/src/app/: cli.py
projects/forensic_cpra_engine/src/app/claim_loop/: mine.py  models.py  report.py
projects/forensic_cpra_engine/src/app/cpra/: deadline_math.py  parser.py  report.py
projects/forensic_cpra_engine/src/app/evidence_vault/: vault.py
projects/forensic_cpra_engine/src/app/gates/: evidentiary_gate.py
projects/forensic_cpra_engine/tests/: test_claim_loop.py  test_cpra_deadlines.py  test_evidentiary_gate.py  test_vault.py
(+136 files in other folders)
