[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-cpra-engine"
version = "0.1.0"
description = "Evidence Vault + CPRA Compliance Engine"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[project.scripts]
forensic-cpra = "app.cli:main"
